Fixing footer alignment
- Fixing footer alignment

--- a/index.css
+++ b/index.css
@@ -1534,6 +1534,10 @@ header[class$="-title"] h2 {
 }
 
 @media only screen and (max-width: 767px) {
+  .wrap span {
+    display: block;
+    text-align: center;
+  }
   .latest-funds-left,
   .latest-funds-right {
     margin-top: 20%;
